# IAM_Application

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: fec8b8ec9b6d_initial_iam_schema.py
app/: __init__.py  main.py  session.py
app/config/: database.py  settings.py
app/dependencies/: auth_dependencies.py  services.py
app/models/: __init__.py  authentication_policy.py  base.py  credential.py  group.py  identity.py  mfa_challenge.py  mfa_factor.py  organization.py  password_history.py  role.py  role_swap.py  user.py  user_audit_log.py  user_details.py  user_group.py  user_organization.py  user_role.py
app/repositories/: __init__.py  base_repository.py  credential_repository.py  identity_repository.py  organization_repository.py  user_details_repository.py  user_repository.py
app/routes/: auth_routes.py  user_routes.py
app/schemas/: __init__.py  auth_schema.py  user_schema.py
app/services/: __init__.py  auth_service.py  base_service.py  exceptions.py  identity_service.py  organization_service.py  user_details_service.py  user_service.py
app/utils/: jwt_handler.py  password_hasher.py
frontend/: package-lock.json  package.json
frontend/src/: App.css
frontend/src/pages/: Signup.tsx
frontend/src/services/: api.ts  auth.ts
migrations/: env.py
